Added Profile Management in CV Service

--- a/CVMakerApiGateway/appsettings.json
+++ b/CVMakerApiGateway/appsettings.json
@@ -10,5 +10,8 @@
     "OktaDomain": "https://dev-64581829.okta.com/oauth2/default",
     "AuthorizationServerId": "default",
     "Audience": "api://default"
+  },
+  "ApiConfigs": {
+    "CV": "https://localhost:7026"
   }
 }
