--- a/CVMakerApiGateway/CVMakerApiGateway.csproj
+++ b/CVMakerApiGateway/CVMakerApiGateway.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="Okta.AspNetCore" Version="4.4.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
